<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>catpoint-parent</artifactId>
    <groupId>com.udacity.catpoint</groupId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>security</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Security</name>
  <url>http://www.example.com</url>

  <dependencies>
      <dependency>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
          <version>2.8.5</version>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-params</artifactId>
          <version>5.7.1</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.udacity.catpoint</groupId>
          <artifactId>Image</artifactId>
          <version>1.0-SNAPSHOT</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
          <version>30.1-jre</version>
      </dependency>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.12</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.miglayout</groupId>
          <artifactId>miglayout-swing</artifactId>
          <version>5.1</version>
      </dependency>
      <dependency>
          <groupId>com.miglayout</groupId>
          <artifactId>miglayout</artifactId>
          <version>3.5.5</version>
      </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-junit-jupiter</artifactId>
          <version>3.6.28</version>
          <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
          <version>5.7.0</version>
          <scope>test</scope>
      </dependency>
  </dependencies>

  <properties>
      <maven.compiler.source>14</maven.compiler.source>
      <maven.compiler.target>14</maven.compiler.target>
  </properties>

  <build>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-assembly-plugin</artifactId>
              <version>3.3.0</version>
              <executions>
                  <execution>
                      <id>make-assembly</id>
                      <phase>package</phase>
                      <goals>
                          <goal>single</goal>
                      </goals>
                      <configuration>
                          <descriptorRefs>
                              <descriptorRef>jar-with-dependencies</descriptorRef>
                          </descriptorRefs>
                          <archive>
                              <manifest>
                                  <mainClass>com.udacity.catpoint.security.application.CatpointApp</mainClass>
                              </manifest>
                          </archive>
                      </configuration>
                  </execution>
              </executions>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>2.19.1</version>
              <configuration>
                  <argLine>
                      --add-opens src.main.java.com.udacity.catpoint.security.service.SecurityService/com.udacity.catpoint.security.service=ALL-UNNAMED
                  </argLine>
              </configuration>
          </plugin>
          <plugin>
              <groupId>com.github.spotbugs</groupId>
              <artifactId>spotbugs-maven-plugin</artifactId>
              <version>4.2.0</version>
              <dependencies>
                  <dependency>
                      <groupId>com.github.spotbugs</groupId>
                      <artifactId>spotbugs</artifactId>
                      <version>4.2.0</version>
                  </dependency>
              </dependencies>
          </plugin>
      </plugins>
  </build>

</project>
